# user-service

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PERFORMANCE_COMPARISON.md  README.md  TDD_IMPLEMENTATION_SUMMARY.md
src/: impls.rs  lib.rs  main.rs  traits.rs
src/handlers/: di_handlers.rs  helpers.rs  mod.rs  user_handlers.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: auth.rs  response.rs  user.rs
src/services/: cache_service.rs  google_drive_service.rs  mod.rs
src/utils/: mod.rs  security.rs
tests/: di_integration_tests.rs  handler_integration_tests.rs  integration_tests.rs  unit_tests.rs  user_endpoint_tests.rs
