[package]
name = "user-service"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "user-service"
path = "src/main.rs"

[lib]
name = "user_service"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = "4.8"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

# Async traits for DI
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

# Database
mongodb = "2.8"
bson = "2.9"

# Caching
redis = "0.25"
deadpool-redis = "0.15"
lru = "0.12"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"
actix-web-httpauth = "0.8"

# Image processing (for avatars)
image = "0.24"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Utilities
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
regex = "1.10"
env_logger = "0.11"
log = "0.4"
lazy_static = "1.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
bcrypt = "0.15"
mockall = "0.13"